--- a/app/views/todolists/index.html.erb
+++ b/app/views/todolists/index.html.erb
@@ -2,6 +2,6 @@
 <% @lists.each do |list| %>
 	<p>タイトル</p>
 	<span>
-		<%=link_to list.title, "/todolists/#{list.id}" %>
+		<%=link_to list.title, todolists_path(list.id) %>
 	</span>
 <% end %>
